<resources>
    <string name="app_name" translatable="false">TVS</string>
    <string name="add">Add</string>
    <string name="addSeason"><u>Add a season</u></string>
    <string name="addEpisode"><u>Add an episode</u></string>
    <string name="linkStandard">https://www.imdb.com/title/</string>
    <string name="close">Close</string>
    <string name="episodeNr">Episode\'s number: </string>
    <string name="seasonNr">Season\'s number: </string>
    <string name="Seasons">Seasons</string>
    <string name="Episodes">Episodes</string>
    <string name="IMDb">IMDb</string>
    <string name="Poster">Poster</string>
    <string name="eye">Eye Icon</string>
    <string name="goTo">\></string>
    <string name="adding">Adding&#8230;</string>
    <string name="added">Added</string>
    <string name="calendar">Calendar</string>
    <string name="time">Time</string>
    <string name="forSeasonLink">episodes?season=</string>
    <string name="nameFinder">&lt;div class=\"title_wrapper\"&gt;</string>
    <string name="namePattern">&gt;(.*)&amp;nbsp;</string>
    <string name="originalNameFinder">originalTitle</string>
    <string name="originalNamePattern">originalTitle\"&gt;(.*)&lt;span</string>
    <string name="dateFinder">See more release dates</string>
    <string name="datePattern">\\((.*)\\)</string>
    <string name="nrSeasonsFinder">seasons-and-year-nav</string>
    <string name="nrSeasonsFindingCond">&lt;a href=</string>
    <string name="nrSeasonPattern">season=(\\d+)&amp;</string>
    <string name="episodeItemFinder">ipl-rating-widget</string>
    <string name="episodeItemEmptyPattern">placeholder</string>
    <string name="nrEpisodesFinder">Episode Guide</string>
    <string name="nrEpisodesPattern">&gt;(\\d+)\\sepisodes&lt;</string>
    <string name="IMDbRatingFinder1">based on</string>
    <string name="IMDbRatingFinder2">user ratings</string>
    <string name="IMDbRatingPattern">((\\d|\\.)*) based on</string>
    <string name="imageLinkFinder">Poster\" title="</string>
    <string name="imageLinkPattern">src=\"(.*)\"</string>
    <string name="addingTVSeriesError">Unable to add T.V. Series. Check the network connection and try again.</string>
    <string name="episodeItemAirdateFinder">&lt;div class=\"airdate\"&gt;</string>
    <string name="episodeItemAirdatePattern">(\\d{4})</string>
    <string name="addingSeasonError">Unable to add season. Check the network connection and try again.</string>
    <string name="updateTVSeriesError">Unable to update TVSeries. Check the network connection and try again.</string>
    <string name="updateTVSeriesShortError">Unable to update TVSeriesShort. Check the network connection and try again.</string>
    <string name="sharingTVSeriesId">TVSERIES_ID</string>
    <string name="sharingSeasonId">SEASON_ID</string>
    <string name="DbName">TVSeriesDB</string>
    <string name="episodeItemIdOdd">list_item odd</string>
    <string name="episodeItemIdEven">list_item even</string>
    <string name="episodeFinder">episodeNumber</string>
    <string name="episodeLinkPattern">&lt;div data-const=\"(.*)\" class=</string>
    <string name="IMDbSiteLink">https://www.imdb.com/title/</string>
    <string name="episodeAirdateFinder">Episode aired</string>
    <string name="episodeAirdatePattern">Episode aired (.*)</string>
    <string name="episodeDurationFinder">&lt;time datetime</string>
    <string name="episodeDurationPattern">(\\d.*)</string>
    <string name="episodeImageLinkFinder">&lt;div class=\"poster\"&gt;</string>
    <string name="src">src=</string>
    <string name="imageLinkEnd">&lt;/a&gt;</string>
    <string name="episodeDescriptionFinder">&lt;h2&gt;Storyline&lt;/h2&gt;</string>
    <string name="episodeDescriptionPattern">&gt;(.*)&lt;/span&gt;</string>
    <string name="episodeDescriptionPatternNotFinished">&gt;(.*)\\.</string>
    <string name="addingEpisodeError">Unable to add episode. Check the network connection and try again.</string>
    <string name="alreadyExists">Unable to add T.V. Series. Already exists.</string>
    <string name="episode0FinderInSeason">content=\"0\"</string>
    <string name="episodeIndexMatcher">content=\"(\\d+)\"</string>
    <string name="IMDbRatingInSeasonFinder">ipl-rating-star__rating</string>
    <string name="IMDbRatingInSeasonPattern">&gt;((\\d|\\.)*)&lt;</string>
    <string name="back">Back</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="noTVSeries">No T.V. Series.\n\nPress Add button to add a T.V. Series.</string>
    <string name="theEnd">• The end •</string>
    <string name="noSeason">No season.\n\nPress Add button to add a season.</string>
    <string name="upArrow">Up arrow</string>
    <string name="noEpisode">No episode.\n\nPress Add button to add an episode.</string>
    <string name="sentenceFinder">(?&lt;=[^A-Z]{4})(?=\\.\\s)</string>
    <string name="onGoing">ON GOING</string>
    <string name="inStandBy">IN STAND BY</string>
    <string name="FINISHED">FINISHED</string>
    <string name="finished">• Finished •</string>
    <string name="upToDate">• Up-To-Date •</string>
    <string name="unknownValue">\\N</string>
    <string name="tvSeries">tvSeries</string>
    <string name="tvMiniSeries">tvMiniSeries</string>
    <string name="dbFileLink">https://datasets.imdbws.com/title.basics.tsv.gz</string>
    <string name="UTF8">utf-8</string>
    <string name="newLine">\\n</string>
    <string name="dbFileHeader">tconst\\ttitleType\\tprimaryTitle\\toriginalTitle\\tisAdult\\tstartYear\\tendYear\\truntimeMinutes\\tgenres</string>
    <string name="startsWithIdMatcher">^tt[\\\\d]{7}</string>
    <string name="tab">\\t</string>
    <string name="Documentary">Documentary</string>
    <string name="News">News</string>
    <string name="Short">Short</string>
    <string name="Animation">Animation</string>
    <string name="Music">Music</string>
    <string name="Adult">Adult</string>
    <string name="Sport">Sport</string>
    <string name="RealityTV">Reality-TV</string>
    <string name="GameShow">Game-Show</string>
    <string name="TalkShow">Talk-Show</string>
    <string name="seasonUnknownFinder">episode_top</string>
    <string name="seasonUnknownPattern">Unknown</string>
    <string name="searchUntil">item_description</string>
    <string name="genreLinkFinder">\"genre\":</string>
    <string name="genreLinkStopper">\]\,</string>
    <string name="episodeHeaderFormat">%s - S%d</string>
    <string name="updateTVSeriesJobName">updateTVSeriesJob5362</string>
    <string name="updateTVSeriesShortJobName">updateTVSeriesShortJob6253</string>
    <string name="percent">%</string>
    <string name="searchEditTextHint">Search a T.V. Series</string>
    <string name="addEditTextHint">Add a T.V. Series</string>
    <string name="intFormat">%d</string>
    <string name="nrOfEpisodeFormat">Episode %d</string>
    <string name="float1RealFormat">%.1f</string>
    <string name="yearsTVSeriesShortFormat">%s - %s</string>
    <string name="slash">/</string>
    <string name="nrOFSeasonFormat">Season %d</string>
    <string name="yearsEpisodeFormat">- %d%s -</string>
    <string name="minus">-</string>
    <string name="nrTotalEpisodeFormat">out of %d</string>
    <string name="comma">,</string>
    <string name="yearsEpisodesFormat">- %d-%d -</string>
    <string name="intStringFormat">%d%s</string>
    <string name="stringStringFormat">%s%s</string>
    <string name="endTag">&lt;/</string>
    <string name="dot">.</string>
    <string name="noImageLink">https://semantic-ui.com/images/wireframe/image.png</string>
    <string name="minusOne">-1</string>
    <string name="updateStopped">Update stopped.</string>
    <string name="updateTVSeriesChannel">C1</string>
    <string name="updateTVSeriesShortChannel">C2</string>
    <string name="updateTVSeriesName">UpdateTVSeries</string>
    <string name="updateTVSeriesShortName">UpdateTVSeriesShort</string>
    <string name="updateTVSeriesDescription">Update TVSeries table</string>
    <string name="updateTVSeriesShortDescription">Update TVSeriesShort table</string>
    <string name="startUpdate">Starting update …</string>
    <string name="listUpdated">TVS list was updated. </string>
    <string name="dbUpdated">TVS database was updated. </string>
    <string name="TVSeriesWereUpdated">T.V. Series were updated.</string>
    <string name="listNotUpdated">TVS list couldn\'t be updated</string>
    <string name="dbNotUpdated">TVS database couldn\'t be updated</string>
    <string name="minusForYears">–</string>
    <string name="onlyOneGenreFinder">\"genre\": \"(.*)\"</string>
    <string name="update">update</string>
    <string name="updating">Updating&#8230;</string>
    <string name="updated">Updated</string>
    <string name="nothingToUpdate">Nothing to update</string>
    <string name="clickToUpdate">Click on the state below to update</string>
    <string name="updateDB">update db</string>
</resources>
