<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon" />

    <ImageView
        android:id="@+id/updateButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:visibility="invisible"
        android:contentDescription="@string/update"
        android:background="@drawable/ripple_style"
        android:src="@drawable/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/updateDBButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:visibility="invisible"
        android:contentDescription="@string/update"
        android:background="@drawable/ripple_style"
        android:src="@drawable/updatedb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/updateButton"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/searchButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:visibility="invisible"
        android:contentDescription="@string/search"
        android:background="@drawable/ripple_style"
        android:src="@drawable/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sortButton"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/sortButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:visibility="invisible"
        android:contentDescription="@string/sort"
        android:background="@drawable/ripple_style"
        android:src="@drawable/sort"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/deleteButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        android:contentDescription="@string/delete"
        android:background="@drawable/ripple_style"
        android:src="@drawable/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.v7.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:lineSpacingExtra="0dp"
        android:lineSpacingMultiplier="0"
        android:background="@drawable/search_style"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/iconImageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>